syntax = "proto3";
package cis.types;
option csharp_namespace = "CIS.Infrastructure.gRPC.CisTypes";

import "IdentitySchemas.proto";

message Identity {
  int32 identityId = 1;

  IdentitySchemes identityScheme = 2;
}